--- a/rewrite/web.config
+++ b/rewrite/web.config
@@ -9,7 +9,7 @@
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                     </conditions>
-                    <action type="Rewrite" url="index.php/{R:1}" appendQueryString="true" />
+                    <action type="Rewrite" url="index.php?p={R:1}" appendQueryString="true" />
                 </rule>
             </rules>
         </rewrite>
